# water-quality-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: health.py  water_quality.py
app/core/: data_fetcher.py  data_processor.py  report_generator.py
app/models/: requests.py  responses.py
app/static/: water-quality.html
deployment/gcp/: cloudbuild.yaml
